<resources>
    <string name="app_name">Bacus</string>
    <string name="wine_image_description">Imagen que representa a un vino</string>
    <string name="reload">Recargar</string>
    <string name="choose_an_option">Elegir una opción</string>
    <string name="fit">Ajustada</string>
    <string name="Center">Centrada</string>
    <string name="Cancell">Cancelar</string>
    <string name="Accept">Aceptar</string>
    <string name="Settings">Ajustes</string>
    <string name="next">Siguiente</string>
    <string name="previus">Anterior</string>
    <string name="loading">Cargando...</string>
    <string name="red">Tinto</string>
    <string name="white">Blanco</string>
    <string name="rose">Rosado</string>
    <string name="other">Otro</string>
    <string name="wine_image">Imagen del vino</string>
    <string name="wine_company_subtitle">Bodega</string>
    <string name="go_to_web">Ir a la pagina web</string>
    <string name="wine_type_subtitle">Tipo</string>
    <string name="wine_origin_subtitle">Origen</string>
    <string name="wine_grape_subtitle">Uvas</string>
</resources>
