<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



    <TextView
        android:text="@string/choose_an_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/choose_option_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
       />
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/choose_option_text"
        android:id="@+id/scale_type_radios"
 >

        <RadioButton
            android:text="@string/fit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fit_radio"
            android:layout_weight="1"/>

        <RadioButton
            android:text="@string/Center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/center_radio"
            android:layout_weight="1"/>

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:text="@string/Cancell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_button"
            android:layout_weight="1"/>

        <Button
            android:text="@string/Accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>