<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.adasistemas.bacus.controller.activity.WineActivity"
              android:orientation="vertical"
              android:background="@drawable/fondo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/wine_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/wine_image"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:src="@drawable/bembibre" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wine_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="wine_name"
                style="@style/WineTitle"/>

            <RatingBar
                android:id="@+id/wine_rating"
                style="@style/WineRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="1" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/wine_company_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wine_company_subtitle"
                        style="@style/WineSubtitle" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/wine_company"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_centerInParent="false"
                            android:layout_centerVertical="true"
                            android:layout_toLeftOf="@+id/go_to_web_button"
                            android:text="wine_company"
                            style="@style/WineText" />

                        <ImageButton
                            android:id="@+id/go_to_web_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/go_to_web"
                            android:src="@drawable/www" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/wine_type_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wine_type_subtitle"
                        style="@style/WineSubtitle" />

                    <TextView
                        android:id="@+id/wine_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="wine_type"
                        style="@style/WineText" />

                    <TextView
                        android:id="@+id/wine_origin_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wine_origin_subtitle"
                        style="@style/WineSubtitle" />

                    <TextView
                        android:id="@+id/wine_origin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="wine_origin"
                        style="@style/WineText" />

                    <TextView
                        android:id="@+id/wine_grape_subtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wine_grape_subtitle"
                        style="@style/WineSubtitle" />

                    <LinearLayout
                        android:id="@+id/grapes_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/wine_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="wine notes"
            style="@style/WineNotes" />

    </ScrollView>

</LinearLayout>
